Fix bug 5978 and bug 5981. Using 1.5 API let eclox crash when running on 1.4 jre, although it was ask the compiler to ensure source and binary compatibility.